# wrangler

./: .gitignore  .travis.yml  CHANGELOG  ChangeLog  INSTALL  INSTALL.WIN32  LICENCE  Makefile  Makefile.in  README  README.txt  TODO  aclocal.m4  api_interface.html  api_refac.html  api_wrangler.html  configure  configure.ac  edoc-info  gen_composite_refac.html  gen_refac.html  how_to_use.htm  index.html  inspec_examples.erl  inspec_lib.html  modules-frame.html  overview-summary.html  overview.edoc  packages-frame.html  rebar.config  refac_api_migration.html  refac_apply_to_remote_call.erl  refac_specialise_a_function.erl  refac_unfold_behav_instance.erl  vsn.mk  wrangler_gen.html  wrangler_refacs.html
RefactoringExamples/: README
behaviour_extraction/: ast_tree.html  index.html  overview-summary.html
c_src/: .gitignore  Makefile  Makefile.in  erl_comm.c  main.c  suffix_tree.c  suffix_tree.h
doc/: api_wrangler.html  code_inspector_examples.erl  code_inspector_examples.html  edoc-info  gen_composite_refac.html  gen_refac.html  how_to_use.htm  index.html  interface_api.html  modules-frame.html  overview-summary.html  overview.edoc  packages-frame.html  refac_api.html  refac_apply_to_remote_call.erl  refac_list.erl  refac_remove_arg.erl  refac_specialise.erl  refac_swap_args.erl  wrangler.html  wrangler_api.html  wrangler_code_inspector.html  wrangler_gen.html
docs/: getting-started.md  index.md  publications.md
ebin/: dynamic_menu_items  refac_parse.beam  wrangler.app  wrangler_app.app
eclipsePlugin/: .codepath  .project  build.properties  plugin.properties  (+2 more)
(+964 files in other folders)
